# micro

./: Makefile  docker-compose.yml  k6.js
api-gateway/: package.json  start.sh
api-gateway/src/: app.controller.ts  app.service.ts
gitignore/: JetBrains.gitignore
proto/: factorial.proto  fibonacci.proto  geometry.proto
proto/trigonometry/: trigonometry.proto
scripts/: generate-gitignore.sh  gitignore.sh
services/: .gitignore
services/factorial/: Makefile  factorial_pb2.py  factorial_pb2_grpc.py  main.py  requirements.txt
services/fibonacci/: pom.xml  start.sh
services/fibonacci/src/main/java/co/fleeingsunlight/micro/: App.java  FibonacciServiceImpl.java
services/fibonacci/src/main/proto/: fibonacci.proto
services/fibonacci/src/test/java/co/fleeingsunlight/micro/: AppTest.java
services/geometry/: Cargo.toml  build.rs  start.sh
services/geometry/src/: main.rs
services/trigonometry/: go.mod  go.sum  main.go
services/trigonometry/proto/trigonometry/: trigonometry.pb.go  trigonometry_grpc.pb.go
