[package]
name = "geometry"
version = "0.1.0"
authors = ["FleeingSunlight <hi@usagidon-h.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "geometry-service"
path = "src/main.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
